2002-12-16  Bruno Haible  <bruno@clisp.org>

	* configure.in: Add test for <utime.h>. Needed for mingw32.

2002-12-07  Bruno Haible  <bruno@clisp.org>

	Switch to autoconf-2.57 and automake-1.7.2.
	* configure.in: Use AC_CONFIG_FILES, because the AC_OUTPUT commands
	and not run any more when config.status is called to create a single
	file.
	* elisp-comp: New file, from automake-1.7.2.

2002-11-19  Bruno Haible  <bruno@clisp.org>

	Switch to autoconf-2.56.
	* configure.in (LTLIBOBJS): Remove variable.

2002-11-14  Bruno Haible  <bruno@clisp.org>

	* Makefile.am ($(srcdir)/tests/rpathx/aclocal.m4,
	$(srcdir)/tests/rpathy/aclocal.m4,
	$(srcdir)/tests/rpathz/aclocal.m4): Depend on m4/libtool.m4.

2002-11-13  Bruno Haible  <bruno@clisp.org>

	Assume ANSI C.
	* configure.in: Remove AC_C_BACKSLASH_A call.
	* os2/configure.awk: Remove HAVE_C_BACKSLASH_A setting.

2002-11-07  Bruno Haible  <bruno@clisp.org>

	* ltmain.sh: Upgrade to libtool-1.4.3.
	* config.rpath: Upgrade to libtool-1.4.3.

2002-10-28  Bruno Haible  <haible@clisp.cons.org>

	* config.guess, config.sub: Update to GNU version 2002-10-21.

2002-10-27  Bruno Haible  <bruno@clisp.org>

	* libasprintf: New subdirectory.
	* configure.in (CXX): Adjust to match the result in and the
	requirements of the libasprintf subdirectory.
	(SUBDIR_libasprintf): New AC_SUBST.
	(AC_CONFIG_SUBDIRS): Recurse into libasprintf.
	* Makefile.am (SUBDIRS): Add libasprintf conditionally.
	(DIST_SUBDIRS): New variable.
	* PACKAGING: Add libasprintf.*, autosprintf.h, and its documentation
	autosprintf.html, autosprintf.info.

2002-10-27  Bruno Haible  <bruno@clisp.org>

	* PACKAGING: Update list of installed .m4 files.

2002-09-27  Bruno Haible  <bruno@clisp.org>

	* mkinstalldirs: Update from automake-1.7+.

2002-09-16  Bruno Haible  <bruno@clisp.org>

	* ltmain.sh (install): Use "ln -s -f" instead of "rm -f && ln -s"
	to make a symlink for a shared library.
	Reported by Nelson H. F. Beebe <beebe@math.utah.edu>.
