@@ -32,6 +32,7 @@ AC_TYPE_SIZE_T
 gt_TYPE_LONGLONG
 gt_TYPE_LONGDOUBLE
 gt_TYPE_WCHAR_T
+gt_TYPE_WINT_T
 AC_CHECK_TYPES(ptrdiff_t)
 gt_TYPE_INTMAX_T
 
