@@ -1,3 +1,8 @@
+2003-01-12  Bruno Haible  <bruno@clisp.org>
+
+	* wint_t.m4: New file.
+	* Makefile.am (EXTRA_DIST): Add it.
+
 2003-01-08  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.m4 (AM_PO_SUBDIRS): Avoid warning when there are at least
