@@ -1,3 +1,13 @@
+2003-01-12  Bruno Haible  <bruno@clisp.org>
+
+	Portability to FreeBSD.
+	* configure.in: Invoke gt_TYPE_WINT_T.
+	* printf-args.h: Use HAVE_WINT_T, not HAVE_WCHAR_T, to check for
+	availability of wint_t.
+	* printf-argc.c: Likewise.
+	* printf-parse.c: Likewise.
+	* vasnprintf.c: Likewise.
+
 2002-12-16  Bruno Haible  <bruno@clisp.org>
 
 	* configure.in: Add test for <utime.h>. Needed for mingw32.
